--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
-*.jar
+### SBT ###
+dist/*
 target/
-.idea/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+logs/
+
+### Scala ###
+*.class
+*.log
+
+### Vim ###
+# swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
+
+.idea
