test logging via ActorLogging

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,7 +5,7 @@ akka {
   log-config-on-start = off
   log-dead-letters-during-shutdown = off
   # Options: off, error, warning, info, debug
-  loglevel = debug
+  loglevel = info
   stdout-loglevel = debug
 
   actor.debug {
